delete all started

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -24,6 +24,7 @@
       </label>
       <button>Add To List</button>
     </form>
+    <button class="delete-completed">Delete Completed</button>
     <ul id="main-list"></ul>
     <script src="./main.js"></script>
   </body>
