--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -8,24 +8,26 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <h1>To Do...</h1>
-    <form id="input-form">
-      <label>
-        I've got to
-        <input type="text" />
-      </label>
-      <label>
-        Priority
-        <select>
-          <option>low</option>
-          <option>medium</option>
-          <option>high</option>
-        </select>
-      </label>
-      <button>Add To List</button>
-    </form>
-    <button class="delete-completed">Delete Completed</button>
-    <ul id="main-list"></ul>
+    <div class="container">
+      <h1>To Do...</h1>
+      <form id="input-form">
+        <label>
+          I've got to
+          <input type="text" />
+        </label>
+        <label>
+          Priority
+          <select>
+            <option>low</option>
+            <option>medium</option>
+            <option>high</option>
+          </select>
+        </label>
+        <button>Add To List</button>
+      </form>
+      <button class="delete-completed">Delete Completed</button>
+      <ul id="main-list"></ul>
+    </div>
     <script src="./main.js"></script>
   </body>
 </html>
