--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -13,7 +13,7 @@
       <form id="input-form">
         <label>
           I've got to
-          <input type="text" />
+          <input class="text-input" type="text" />
         </label>
         <label>
           Priority
