--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -6,6 +6,8 @@
     <title>Things I Got To Do...</title>
     <link rel="shortcut icon" href="./favicon.ico" />
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;600&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container">
