filter and styling

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -8,15 +8,18 @@
     <link rel="stylesheet" href="./styles.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;600&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container">
       <h1>To Do...</h1>
       <form id="input-form">
-        <label>
+        <label class="long-label">
           I've got to
           <input class="text-input" type="text" />
         </label>
+        <br>
         <label>
           Priority
           <select>
@@ -25,6 +28,7 @@
             <option>high</option>
           </select>
         </label>
+        <button class="filter-priority">Sort by Priority</button>
         <button>Add To List</button>
       </form>
       
